--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" type="text/css" media="@media (max-width: 1200px)" href="stylemobile.css" />
+        <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="stylemobile.css" />
         <title>TechTn</title>
         <link rel = "icon" href = 
         "photos/logo.png" 
