--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="stylemobile.css" />
+        <link rel="stylesheet" type="text/css" media="(max-width: 1440px)" href="stylesmall.css" />
+        <link rel="stylesheet" type="text/css" media="(max-width: 1125px)" href="stylemobile.css" />
         <title>TechTn</title>
         <link rel = "icon" href = 
         "photos/logo.png" 
