--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div id="band2">
             <table id="tablepromo">
                 <tr><td class="tdpromo"><p id="products">Our Products</p></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="PCs.html" form="form" id="button">PCs</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="GPUs.html" form="form" id="button">GPUs</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="comingsoon.html" form="form" id="button">CPUs</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="comingsoon.html" form="form" id="button">RAM</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="comingsoon.html" form="form" id="button">Keyboards</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="comingsoon.html" form="form" id="button">Mouses</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="Moniters.html" form="form" id="button">Moniters</button></td></tr>
-                <tr><td class="tdpromo1"><button type="submit" formaction="comingsoon.html" form="form" id="button">Cables and Adapters</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="PCs.html" form="form" id="button">PCs</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="GPUs.html" form="form" id="button">GPUs</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="comingsoon.html" form="form" id="button">CPUs</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="comingsoon.html" form="form" id="button">RAM</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="comingsoon.html" form="form" id="button">Keyboards</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="comingsoon.html" form="form" id="button">Mouses</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="Moniters.html" form="form" id="button">Moniters</button></td></tr>
+                <tr><td class="tdpromo"><button type="submit" formaction="comingsoon.html" form="form" id="button">Cables and Adapters</button></td></tr>
             </table>
             <a href="GPUs.html" id="apromo"><img src="photos/promo.png" alt="" id="promo"><img src="photos/promoblur.png" alt="" id="promoblur"></a>
             <a href="Moniters.html" id="apromo1"><img src="photos/sixoff.png" alt="" id="promo1"><img src="photos/promo1blur.png" alt="" id="promo1blur"></a>
