--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </tr>
         </table>
         </div>
-        <div id="band3"><p id="products">Discounted Items</p></div>
-        <div id="band4">
+        <div id="band33"><p id="products">Discounted Items</p></div>
+        <div id="band44">
         <table align="center" cellspacing="5">
             <tr>
                 <td><a href="GPUs.html"><img src="products/gpu2.jpg" alt="" class="images"></a><p class="hottxt"></p></td>
@@ -53,5 +53,6 @@
         <br><br><br>
 
         <div id="band5"></div>
+        <button id="COCK">COCK</button>
     </body>
 </html>
