--- a/PCs.html
+++ b/PCs.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <a href="index.html"><div id="band1"><h1>TechTn</h1></div></a>
-        <div id="band3"><p id="products">Our PCs</p></div>
+        <div id="band3"><a href="index.html"><img src="photos/back.png" alt="" id="back"></a><p id="products">Our PCs</p></div>
         <div id="band4">
             <table id="tableproduct" align="center" cellspacing="10">
                 <tr class="trproduct">
